src/objects/Campaign_List_Generation_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Calculated_Field_Type__c</fullName>
        <formula>CASE(  LOWER(Field_Type__c) , 
&apos;combobox&apos;, &apos;STRING&apos;, 
&apos;datacategorygroupreference&apos;, &apos;STRING&apos;, 
&apos;email&apos;, &apos;STRING&apos;, 
&apos;encryptedstring&apos;, &apos;STRING&apos;, 
&apos;id&apos;, &apos;STRING&apos;, 
&apos;multipicklist&apos;, &apos;STRING&apos;, 
&apos;phone&apos;, &apos;STRING&apos;, 
&apos;picklist&apos;, &apos;STRING&apos;, 
&apos;reference&apos;, &apos;STRING&apos;, 
&apos;string&apos;, &apos;STRING&apos;, 
&apos;textarea&apos;, &apos;STRING&apos;, 
&apos;url&apos;, &apos;STRING&apos;, 

&apos;date&apos;, &apos;DATE&apos;, 
&apos;datetime&apos;, &apos;DATETIME&apos;, 

&apos;percent&apos;, &apos;NUMBER&apos;, 
&apos;integer&apos;, &apos;NUMBER&apos;, 
&apos;double&apos;, &apos;NUMBER&apos;, 
&apos;currency&apos;, &apos;NUMBER&apos;, 

&apos;boolean&apos;, &apos;BOOLEAN&apos;, 
&apos;ERROR&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Field Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Operator__c</fullName>
        <formula>CASE ( Operator__c , 
&apos;Equals&apos;, &apos; = &apos;,
&apos;Contains&apos;, &apos; Like &apos;,
&apos;Does Not Contain&apos;, &apos;LIKE&apos;,
&apos;Starts With&apos;, &apos; Like &apos;,
&apos;Not Equal&apos;, &apos; != &apos;,
&apos;Less Than&apos;, &apos; &lt; &apos;,
&apos;Greater Than&apos;, &apos; &gt; &apos;,
&apos;In Range&apos;, &apos; In &apos; ,
&apos;Not In Range&apos;, &apos; Not In &apos; ,
&apos;Error&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Operator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_List_Generation__c</fullName>
        <label>Campaign List Generation</label>
        <referenceTo>Campaign_List_Generation__c</referenceTo>
        <relationshipLabel>Campaign List Generation Criteria</relationshipLabel>
        <relationshipName>Campaign_List_Generation_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expression__c</fullName>
        <formula>CASE ( Operator__c , 
&apos;Equals&apos;, &apos; = &apos;,
&apos;Contains&apos;, &apos; Like &apos;,
&apos;Starts With&apos;, &apos; Like &apos;,
&apos;Not Equal&apos;, &apos; != &apos;,
&apos;Less Than&apos;, &apos; &lt; &apos;,
&apos;Greater Than&apos;, &apos; &gt; &apos;,
&apos;In Range&apos;, &apos; In &apos; ,
&apos;Error&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expression</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Campaign List Generation Criteria</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign List Generation Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Boolean_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Field_Type__c = &apos;BOOLEAN&apos;, ( NOT(UPPER(Value__c) = &apos;TRUE&apos;  || UPPER(Value__c) = &apos;FALSE&apos;)))</errorConditionFormula>
        <errorMessage>Please enter True or False for boolean fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DATE_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND((Field_Type__c = &apos;DATE&apos;  || Field_Type__c = &apos;DATETIME&apos;)  , NOT(REGEX(Value__c, &apos;[0-9]{4}-[0-9]{2}-[0-9]{2}&apos;)))</errorConditionFormula>
        <errorMessage>You have entered an Invalid Date format. The format for dates is YYYY-MM-DD. e.g. 2012-11-07 = 7th November 2012. Please correct your value and retry.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Calculated_Field_Type__c = &apos;NUMBER&apos;,  (VALUE(Value__c) = 0 &amp;&amp; Value__c  &lt;&gt; &apos;0&apos;))</errorConditionFormula>
        <errorMessage>You have entered an invalid number</errorMessage>
    </validationRules>
</CustomObject>